# nexus

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  manage.py  pyproject.toml
.github/workflows/: ci-cd.yml
api/: admin.py  auth.py  oidc.py  serializers.py  urls.py  utils.py  views.py
api/migrations/: 0001_initial.py
api/models/: __init__.py  customers.py  orders.py  products.py
nexus/: settings.py  urls.py
tests/: conftest.py
tests/acceptance/: test_acceptance.py
tests/integration/: test_api.py
tests/unit/: test_models.py  test_utils.py
