[project]
name = "nexus"
version = "0.1.0"
description = "Products API service"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "africastalking>=1.2.9",
    "django>=5.2.2",
    "djangorestframework>=3.16.0",
    "gunicorn>=23.0.0",
    "mozilla-django-oidc>=4.0.1",
    "psycopg[binary]>=3.2.9",
]

[dependency-groups]
dev = [
    "aiosmtpd>=1.4.6",
    "ipdb>=0.13.13",
]
